# EmbedVerse

./: README.md  app.py  pyproject.toml  requirements.txt  run.py
data/: __init__.py  word_sets.py
models/: __init__.py  embedding_loader.py  model_registry.py  similarity.py
visualizations/: __init__.py  embedding_viz.py
